crates/frontend/samples/test8.out
error: malformed parameter for trait parameter
   ┌─ crates/frontend/samples/test8.fir:38:20
   │
38 │         type Huh = (&'b (), &'c ());
   │                    ^^^^^^^^^^^^^^^^

error: malformed parameter for trait parameter
   ┌─ crates/frontend/samples/test8.fir:43:20
   │
43 │         type Huh = (&'b (), &'c ());
   │                    ^^^^^^^^^^^^^^^^

error: malformed parameter for trait parameter
   ┌─ crates/frontend/samples/test8.fir:48:20
   │
48 │         type Huh = (&'b (), &'c ());
   │                    ^^^^^^^^^^^^^^^^
